--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
       rel="stylesheet"
     />
-    <title>Snake Game</title>
+    <title>Snake Mania</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
